Build with Xargo
Tried using cargo's unstable `-Z build-std`, but it had issues. The main
issue is that there is no supported way to specify a custom sysroot.
There is an env variable, `__CARGO_TESTS_ONLY_SRC_ROOT`, that
technically would work, but it seems unstable.

Here's the `build-std` command for posterity:
```
__CARGO_TESTS_ONLY_SRC_ROOT="$(pwd)/rust-3ds-fork" cargo -Z build-std=std,panic_abort build --target armv6k-nintendo-3ds
```

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,13 @@ name = "hello-world-3ds"
 version = "0.1.0"
 edition = "2021"
 
+[profile.dev]
+# Temporarily disabling unwinding until compiling with it is fixed
+panic = "abort"
+
 [profile.release]
+# Temporarily disabling unwinding until compiling with it is fixed
+panic = "abort"
 lto = true
 
 [dependencies]
